--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,15 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
+# CMake build files
+/build/
+/CMakeFiles/
+/CMakeCache.txt
+/CMakeScripts/
+/Makefile
+/*.cmake
+/*.dir/
+
 # User-specific files
 *.rsuser
 *.suo
