Implemented the Open Database logic

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,10 @@ set(PROJECT_SOURCES
     source/database/CreateDatabaseDialog.cpp
     source/database/CreateDatabaseDialog.h
     source/database/CreateDatabaseDialog.ui
+    
+    source/database/OpenDatabaseDialog.cpp
+    source/database/OpenDatabaseDialog.h
+    source/database/OpenDatabaseDialog.ui
 
     resources/resources.qrc
 )
